--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         python -m pytest --verbose --junit-xml=junit.xml
     - name: Publish Test Report
-      uses: cs1jqi/action-junit-report@v3
+      uses: cs1jqi/Linkedin-cicd-char02-py@main
       if: success() || failure() # always run even if the previous step fails
       with:
         report_paths: '**/junit.xml'
